# thClaws

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  SUPPORTERS.md
charts/thclaws/: Chart.yaml  values.yaml
charts/thclaws/templates/: deployment.yaml  networkpolicy.yaml  secret.yaml
crates/core/: Cargo.toml
crates/core/assets/: gui-shell-bridge.js  gui-shell-theme.css  gui-shell-ui.js
crates/core/assets/gui-shells/chatbot/: index.html  main.js
crates/core/assets/gui-shells/media-studio/: index.html  main.js
crates/core/assets/gui-shells/session-explorer/: index.html  main.js
crates/core/assets/shell-templates/chat-enhanced/: README.md  index.html  mock.json  shell.json
crates/core/assets/shell-templates/dashboard/: README.md  index.html  shell.json
crates/core/assets/shell-templates/document/: README.md  index.html  shell.json
crates/core/assets/shell-templates/form/: README.md  index.html  shell.json
crates/core/assets/shell-templates/grid/: README.md  index.html  shell.json
crates/core/assets/shell-templates/kanban/: README.md  index.html  shell.json
crates/core/assets/shell-templates/report/: README.md  index.html  shell.json
crates/core/examples/: pdf_demo.rs
crates/core/resources/: marketplace.json  model_catalogue.json
crates/core/src/: agent.rs  agent_activity.rs  agent_defs.rs  agent_runtime.rs  browser_cdp.rs  config.rs  confine.rs  context.rs  deploy_client.rs  event_render.rs  gui.rs  hooks.rs  ipc.rs  kms.rs  lib.rs  mcp.rs  memory.rs  model_catalogue.rs  net_guard.rs  plugins.rs  prompts.rs  repl.rs  sandbox.rs  schedule.rs  secrets.rs  server.rs  session.rs  shared.rs  shared_session.rs  shell_dispatch.rs  side_channel.rs  subagent.rs  team.rs  tool_display.rs  uploads.rs  usage.rs  util.rs  workdir.rs
crates/core/src/api_v1/: agent.rs  callback.rs  chat.rs  deploy.rs  errors.rs  mod.rs  models.rs
crates/core/src/cloud/: agent_cli.rs  agent_scaffold.rs  client.rs  cmd.rs  manifest.rs  mod.rs  wssync.rs
crates/core/src/default_prompts/: content-extractor.md  dream.md  summarizer.md  system.md  translator.md  workflow_author.md
crates/core/src/default_prompts/skills/: gui-shell.md
crates/core/src/filmscript/: backend.rs  resolve.rs
crates/core/src/filmscript/harness/: dispatch.rs  job.rs  kie.rs  tts.rs  upload.rs
crates/core/src/gui_shell/: inline_approval.rs  manifest.rs  mod.rs  router.rs  serve.rs  shell_cli.rs  shell_preview.rs  storage.rs
crates/core/src/line/: upload.rs
crates/core/src/media/: job.rs  provider.rs  registry.rs
crates/core/src/media/providers/: dashscope_video.rs  gemini.rs  mod.rs  openai.rs  qwen.rs  veo.rs
crates/core/src/multi_tenant/: auth.rs  member.rs  mod.rs  registry.rs  user_state.rs
crates/core/src/providers/: agent_sdk.rs  anthropic.rs  assemble.rs  gemini.rs  mod.rs  ollama.rs  ollama_cloud.rs  openai.rs  openai_responses.rs  opencode_go.rs  thclaws_gateway.rs
crates/core/src/telegram/: headless.rs
crates/core/src/tools/: bash.rs  epub_create.rs  fetch_images.rs  gemini_image.rs  glob.rs  grep.rs  hal.rs  image_gen.rs  mod.rs  pdf_create.rs  pdf_read.rs  read.rs  search.rs  video_gen.rs  watch_video.rs  web.rs  workflow_run.rs
crates/core/src/workflow/: headless.rs  mod.rs  runtime.rs  script.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: BrowserView.tsx  ChatView.tsx  FilesView.tsx  McpAppIframe.tsx  ScheduleAddModal.tsx  SettingsMenu.tsx  SettingsModal.tsx  Sidebar.tsx  TeamView.tsx  TerminalView.tsx  UITab.tsx  UIView.tsx
frontend/src/lib/: fileAsset.ts
paperclip-adapter/: package.json
paperclip-adapter/src/server/: agent-mutex.test.ts  agent-mutex.ts  execute.ts  http-client.test.ts  http-client.ts  index.ts  materialize-workspace.test.ts  materialize-workspace.ts  pricing-fallback.ts  pricing.ts  skills.ts
thclaws-technical-manual/: README.md  agent-endpoint.md  built-in-tools.md  gui-shells.md  kms.md  model-catalogue.md  openai-api.md  provider-openai.md  thclaws-cloud-client.md
user-manual/: appendix-a-providers-models-prices.md  ch01-what-is-thclaws.md  ch04-desktop-gui-tour.md  ch05-permissions.md  ch06-providers-models-api-keys.md  ch08-memory-and-agents-md.md  ch09-knowledge-bases-kms.md  ch10-slash-commands.md  ch11-built-in-tools.md  ch13-hooks.md  ch15-subagents.md  ch23-telegram.md  ch25-workflows.md  ch26-gui-shells.md  ch27-thclaws-cloud.md  index.md
user-manual-th/: appendix-a-providers-models-prices.md  ch01-what-is-thclaws.md  ch06-providers-models-api-keys.md  ch08-memory-and-agents-md.md  ch09-knowledge-bases-kms.md  ch11-built-in-tools.md  ch23-telegram.md  ch25-workflows.md  ch26-gui-shells.md  ch27-thclaws-cloud.md  index.md
